Fixed some panel alignments, resized gaps, and removed duplicate category headers

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -95,6 +95,12 @@
   padding: 0 0 32px 0 !important;
   position: relative;
   z-index: 4; }
+  @media (min-width: 460px) {
+    #intro {
+      min-height: 192px; } }
+  @media (min-width: 840px) {
+    #intro {
+      min-height: 224px; } }
   @media (min-width: 1154px) {
     #intro {
       min-height: 416px;
@@ -1382,7 +1388,7 @@ main#app {
           height: 96px;
           width: 96px; } }
 
-#intro + .category_preview {
+#intro + .category_preview > section > header {
   margin-top: 4px; }
 
 .version_number {
